# q8-caster

./: CASTING_FEATURES.md  Cargo.toml  MCP_SETUP.md  README.md  config.toml.example  install-mcp.sh  mcp-config.json  q8-caster.service  test_mcp.sh
docs/: KEYCLOAK_SETUP.md
scripts/: manage.sh
src/: error.rs  lib.rs  main.rs
src/cache/: mod.rs
src/display/: mod.rs  window.rs
src/mcp/: handlers.rs  mod.rs  server.rs  tools.rs
src/media/: mod.rs
src/network/: chromecast.rs  chromecast_simple.rs  discovery.rs  mod.rs
src/render/: audio.rs  mirror.rs  mod.rs  pdf.rs  wasm.rs
src/render/themes/: dark.css  light.css
src/secrets/: mod.rs
src/server/: api.rs  auth.rs  http.rs  mod.rs  sse.rs
static/: dashboard.html
