[package]
name = "q8-caster"
version = "0.1.0"
edition = "2021"
authors = ["8b-is <dev@8b.is>"]
description = "AI-powered display casting MCP server with comprehensive media support"
license = "MIT"
repository = "https://github.com/8b-is/q8-caster"

[dependencies]
# HTTP/SSE Server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication & Secrets
jsonwebtoken = "9"
argon2 = "0.5"
oauth2 = "4"
openidconnect = "3"
ring = "0.17"  # For encryption
base64 = "0.22"
toml = "0.8"  # For config files
secrecy = { version = "0.10", features = ["serde"] }  # Secure secret handling

# Display Control (disabled for now)
# winit = "0.30"
# wgpu = "23"
# raw-window-handle = "0.6"

# Media Processing
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = "0.23"
gstreamer-audio = "0.23"
gstreamer-rtsp = "0.23"
gstreamer-rtsp-server = "0.23"

# Markdown Rendering
comrak = "0.29"
# egui = "0.29"
# egui-wgpu = "0.29"
# egui-winit = "0.29"

# Network Protocols
mdns-sd = "0.12"
rupnp = "2"
rust_cast = "0.18"  # More maintained Chromecast library

# 3D Rendering (disabled for now)
# bevy = { version = "0.15", default-features = false, features = ["bevy_render", "bevy_winit", "bevy_asset", "bevy_scene", "bevy_gltf"] }

# Utilities
anyhow = "1"
thiserror = "2"
directories = "5"
once_cell = "1"
bytemuck = "1"
image = "0.25"
crossbeam-channel = "0.5"
dashmap = "6"
lru = "0.12"
bytes = "1"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
lazy_static = "1"
tokio-stream = "0.1"
libc = "0.2"

[build-dependencies]
cbindgen = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
